<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="itg8.com.nowzonedesigndemo.posture.PostureCalibrateSettingActivity"
    tools:showIn="@layout/activity_posture_calibrate_setting">

    <ImageView
        android:id="@+id/img_posture"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/seat_90"/>


        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_below="@+id/img_posture"
            android:layout_centerHorizontal="true"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="4dp"
            style="@style/Base.TextAppearance.AppCompat.Button"
            app:cardBackgroundColor="@color/color_posture_half"
            app:cardElevation="8dp">

        <itg8.com.nowzonedesigndemo.steps.widget.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorWhite"
            android:text="@string/calibrate"
            android:gravity="center"
            android:textSize="17sp"
            android:id="@+id/btn_calibrate" />
        </android.support.v7.widget.CardView>







    <itg8.com.nowzonedesigndemo.steps.widget.CustomFontTextView
        android:id="@+id/lbl_calibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/calibrate"
        android:textSize="@dimen/lbl_alarm_setting_time"
        android:textColor="@color/colorWhite"
        app:font_value="robotoLight"
        android:layout_below="@+id/cardView"/>
    <itg8.com.nowzonedesigndemo.steps.widget.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:id="@+id/line1"
        android:text="@string/line1"
        android:textSize="@dimen/lbl_time_front"
        android:textColor="@color/colorWhite"
        app:font_value="robotoLight"
        android:layout_below="@+id/cardView"/>

    <itg8.com.nowzonedesigndemo.steps.widget.CustomFontTextView
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/line2"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/lbl_time_front"
        app:font_value="robotoLight" />

    <itg8.com.nowzonedesigndemo.steps.widget.CustomFontTextView
        android:id="@+id/customFontTextView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:layout_margin="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/line3"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/lbl_time_front"
        app:font_value="robotoLight" />


</RelativeLayout>
